<resources>
    <string name="app_name">My first App</string>
    <string name="place_name">Digite un nombre...</string>
    <string name="place_lastName">Digite un apellido...</string>
    <string name="genero">Genero:</string>
    <string name="nacimiento">Nacimiento:</string>
    <string name="Q1">Le gusta programar?</string>
    <string name="select_si">Si</string>
    <string name="select_no">No</string>
    <string name="select_language">Lenguaje:</string>
    <string name="java">Java</string>
    <string name="python">Python</string>
    <string name="JavaS">JS</string>
    <string name="golang">Golang</string>
    <string name="c_and_cplus">C/C++</string>
    <string name="c_sharp">C#</string>
    <string name="Send">ENVIAR</string>
    <string name="Clear">LIMPIAR</string>
    <string name="select_datepicker">seleccionar fecha...</string>
    <string name="hello">Hola, mi nombre es:</string>
    <string name="Data_tittle">INFORMACIÓN DE USUARIO</string>
    <string name="user_Name">Nombre:</string>
    <string name="user_LastName">Apellido:</string>
    <string name="user_Gender">Género:</string>
    <string name="birth_Date">Fecha nacimiento:</string>
    <string name="user_Title_likes">PREFERENCIAS USUARIO</string>
    <string name="user_preferences">Programar:</string>
    <string name="favorite_programming_languages">Lenguajes de programación favoritos:</string>

</resources>