<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <EditText
            android:layout_width="333dp"
            android:layout_height="42dp"
            android:inputType="textPersonName"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp" android:layout_marginEnd="20dp" android:layout_marginRight="20dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="22dp"
            app:layout_constraintTop_toBottomOf="@+id/name" android:id="@+id/lastName"
            android:hint="@string/place_lastName" android:autofillHints=""/>
    <EditText
            android:layout_width="335dp"
            android:layout_height="41dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/name"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="20dp" android:layout_marginStart="20dp" android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
            android:hint="@string/place_name" android:autofillHints=""/>
    <TextView
            android:text="@string/genero"
            android:layout_width="77dp"
            android:layout_height="37dp" android:id="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp" android:layout_marginTop="22dp"
            app:layout_constraintTop_toBottomOf="@+id/lastName"/>
    <TextView
            android:text="@string/nacimiento"
            android:layout_width="77dp"
            android:layout_height="37dp" android:id="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="20dp" android:layout_marginStart="20dp" android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"/>
    <Spinner
            android:layout_width="207dp"
            android:layout_height="29dp" android:id="@+id/spinner"
            android:layout_marginLeft="30dp" android:layout_marginStart="30dp"
            app:layout_constraintStart_toEndOf="@+id/textView2" android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="22dp"
            app:layout_constraintTop_toBottomOf="@+id/lastName" app:layout_constraintHorizontal_bias="0.769"/>
    <TextView
            android:text="@string/Q1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView4"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3"/>
    <TextView
            android:text="@string/select_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView5"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp" android:layout_marginTop="35dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4"/>
    <CheckBox
            android:text="@string/java"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/javaCheckBox"
            android:layout_marginLeft="90dp"
            android:layout_marginStart="90dp" app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" android:layout_marginTop="20dp"/>
    <CheckBox
            android:text="@string/python"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/pythonCheckBox"
            android:layout_marginEnd="68dp" android:layout_marginRight="68dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginLeft="75dp"
            android:layout_marginStart="75dp" app:layout_constraintStart_toEndOf="@+id/javaCheckBox"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/radioGroup"/>
    <CheckBox
            android:text="@string/JavaS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/jsCheckBox"
            android:layout_marginTop="18dp"
            app:layout_constraintTop_toBottomOf="@+id/javaCheckBox" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="171dp" android:layout_marginStart="171dp"/>
    <CheckBox
            android:text="@string/golang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/golangCheckBox"
            android:layout_marginEnd="60dp"
            android:layout_marginRight="60dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="18dp"
            app:layout_constraintTop_toBottomOf="@+id/pythonCheckBox" android:layout_marginLeft="78dp"
            android:layout_marginStart="78dp" app:layout_constraintStart_toEndOf="@+id/jsCheckBox"/>
    <CheckBox
            android:text="@string/c_and_cplus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/c_Plus_checkBox"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="171dp"
            android:layout_marginStart="171dp" android:layout_marginTop="18dp"
            app:layout_constraintTop_toBottomOf="@+id/jsCheckBox"/>
    <CheckBox
            android:text="@string/c_sharp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/c_Sharp_checkBox"
            android:layout_marginTop="18dp"
            app:layout_constraintTop_toBottomOf="@+id/golangCheckBox" android:layout_marginLeft="43dp"
            android:layout_marginStart="43dp" app:layout_constraintStart_toEndOf="@+id/c_Plus_checkBox"
            android:layout_marginEnd="75dp" android:layout_marginRight="75dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/Send"
            android:layout_width="149dp"
            android:layout_height="36dp" android:id="@+id/button"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            android:onClick="send_Filled_data"/>
    <Button
            android:text="@string/Clear"
            android:layout_width="149dp"
            android:layout_height="36dp" android:id="@+id/clear_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="48dp" android:layout_marginRight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginLeft="45dp" android:layout_marginStart="45dp"
            app:layout_constraintStart_toEndOf="@+id/button"/>
    <TextView
            android:text="@string/select_datepicker"
            android:layout_width="191dp"
            android:layout_height="28dp" android:id="@+id/textView6"
            android:layout_marginEnd="24dp" android:layout_marginRight="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginLeft="73dp"
            android:layout_marginStart="73dp" app:layout_constraintStart_toEndOf="@+id/textView3"
            android:textSize="14sp" app:layout_constraintHorizontal_bias="1.0" android:layout_marginTop="18dp"
            app:layout_constraintTop_toBottomOf="@+id/spinner"/>
    <RadioGroup
            android:layout_width="174dp"
            android:layout_height="34dp"
            android:layout_marginEnd="20dp" android:layout_marginRight="20dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/textView6"
            android:orientation="horizontal" android:layout_marginLeft="18dp" android:layout_marginStart="18dp"
            app:layout_constraintStart_toEndOf="@+id/textView4" android:id="@+id/radioGroup">
        <RadioButton
                android:text="@string/select_si"
                android:layout_width="69dp"
                android:layout_height="34dp" android:id="@+id/radioButton4"
        />
        <RadioButton
                android:text="@string/select_no"
                android:layout_width="92dp"
                android:layout_height="34dp" android:id="@+id/radioButton6"
                android:layout_marginLeft="24dp" android:layout_marginStart="24dp"
        />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>